syntax = "proto3";

package greet;
option go_package="greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

// Request message
message GreetRequest {
    Greeting greeting = 1;
}

// Response message
message GreetResponse {
    string result = 1;
}

service GreetService{
    // Unary API
    // Create an rpc that takes a GreetRequest and returns a GreetResponse
    rpc Greet(GreetRequest) returns (GreetResponse) {};
}